added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Github Repo</title>
+    <link rel="stylesheet" href="Styles/blog.css">
 </head>
 <body>
-    
+<div>
+    <h3>Jakariya Talukdar </h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos harum similique veritatis perferendis voluptatibus ullam, consectetur laudantium accusantium beatae provident maxime quisquam illo cumque commodi quod nisi eius perspiciatis nostrum!</p>
+
+</div>
+<div>
+    <h3>Jakariya Talukdar </h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos harum similique veritatis perferendis voluptatibus ullam, consectetur laudantium accusantium beatae provident maxime quisquam illo cumque commodi quod nisi eius perspiciatis nostrum!</p>
+
+</div>
+<div>
+    <h3>Jakariya Talukdar </h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos harum similique veritatis perferendis voluptatibus ullam, consectetur laudantium accusantium beatae provident maxime quisquam illo cumque commodi quod nisi eius perspiciatis nostrum!</p>
+
+</div>
 </body>
 </html>
