--- a/index.html
+++ b/index.html
@@ -22,5 +22,14 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos harum similique veritatis perferendis voluptatibus ullam, consectetur laudantium accusantium beatae provident maxime quisquam illo cumque commodi quod nisi eius perspiciatis nostrum!</p>
 
 </div>
+
+<div>
+    <h2>Git Push 3 way</h2>
+    <ul>
+        <li>Git add .</li>
+        <li>Git commit -m"add a meaning massage"</li>
+        <li>Git push</li>
+    </ul>
+</div>
 </body>
 </html>
